--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html">Xelapan</a></h1>
+        <!-- <h1><a href="index.html">Xelapan</a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/favicon.jpg" alt="" class="img-fluid"></a> -->
+        <a href="index.html"><img src="assets/img/logo-blanco.png" alt="" class="img-fluid"></a>
       </div>
 
       <nav id="navbar" class="navbar">
@@ -162,11 +162,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img//XRun/5K.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>5k</h4>
-                <p>test</p>
+                <h4>Categoría 5K</h4>
+                <p>Carrera familiar Pet Friendly</p>
                 <div class="portfolio-links">
                   <a href="assets/img/XRun/5K.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Recorrido 5k"><i class="bx bx-plus"></i></a>
-                  <a href="#5k" title="Mas detalles"><i class="bx bx-link"></i></a>
+                  <!-- <a href="#recorrido#tab-5k" title="Mas detalles"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
             </div>
@@ -176,11 +176,11 @@
             <div class="portfolio-wrap">
               <img src="assets/img/XRun/10K.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>10K</h4>
-                <p>Web</p>
+                <h4>Categoría 10K</h4>
+                <p>Carrera Libre</p>
                 <div class="portfolio-links">
                   <a href="assets/img/XRun/10K.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Recorrido 10K"><i class="bx bx-plus"></i></a>
-                  <a href="#" title="Mas detalles"><i class="bx bx-link"></i></a>
+                  <!-- <a href="#recorrido#tab-10k" title="Mas detalles"><i class="bx bx-link"></i></a> -->
                 </div>
               </div>
             </div>
@@ -193,23 +193,22 @@
     <!-- ======= Recorrido Section ======= -->
     <section id="recorrido" class="features">
       <div class="container">
-        <h1>5K</h1>
         <div class="row" id="5k">
-          <div class="col-lg-4 mb-5 mb-lg-0" data-aos="fade-right">
+          <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade-right">
             <ul class="nav nav-tabs flex-column">
               <li class="nav-item">
-                <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
-                  <h4>Modi sit est</h4>
-                  <p>Quis excepturi porro totam sint earum quo nulla perspiciatis eius.</p>
+                <a class="nav-link active show" data-bs-toggle="tab" href="#tab-5k">
+                  <h4>5K</h4>
+                  <p>Carrera familiar Pet Friendly.</p>
                 </a>
               </li>
               <li class="nav-item mt-2">
-                <a class="nav-link" data-bs-toggle="tab" href="#tab-2">
-                  <h4>Unde praesentium sed</h4>
-                  <p>Voluptas vel esse repudiandae quo excepturi.</p>
+                <a class="nav-link" data-bs-toggle="tab" href="#tab-10k">
+                  <h4>10K</h4>
+                  <p>Carrera libre.</p>
                 </a>
               </li>
-              <li class="nav-item mt-2">
+              <!-- <li class="nav-item mt-2">
                 <a class="nav-link" data-bs-toggle="tab" href="#tab-3">
                   <h4>Pariatur explicabo vel</h4>
                   <p>Velit veniam ipsa sit nihil blanditiis mollitia natus.</p>
@@ -220,22 +219,44 @@
                   <h4>Nostrum qui quasi</h4>
                   <p>Ratione hic sapiente nostrum doloremque illum nulla praesentium id</p>
                 </a>
-              </li>
+              </li> -->
             </ul>
           </div>
-          <div class="col-lg-7 ml-auto" data-aos="fade-left">
+          <div class="col-lg-6 ml-auto" data-aos="fade-left">
             <div class="tab-content">
-              <div class="tab-pane active show" id="tab-1">
-                <figure>
+              <div class="tab-pane active show" id="tab-5k">
+                <h1>Descripción del Recorrido</h1>
+                <ul>
+                  <li>1. Parque a Centroamérica</li>
+                  <li>2. Parque Bolívar</li>
+                  <li>3. Rotonda La Marimba</li>
+                  <li>4. Xelapan Eureka</li>
+                  <li>5. Estadio Mario Camposeco</li>
+                  <li>6. 12 Avenida</li>
+                  <li>7. Parque a Centroamérica</li>
+                </ul>
+                <!-- <figure>
                   <img src="assets/img/XRun/5K.png" alt="" class="img-fluid">
-                </figure>
+                </figure> -->
               </div>
-              <!-- <div class="tab-pane" id="tab-2">
-                <figure>
+              <div class="tab-pane" id="tab-10k">
+                <h1>Descripción del Recorrido</h1>
+                <ul>
+                  <li>1. Parque a Centroamérica</li>
+                  <li>2. Parque Bolívar</li>
+                  <li>3. Rotonda La Marimba</li>
+                  <li>4. Cuesta Blanca</li>
+                  <li>5. Templo Minerva</li>
+                  <li>6. Rotonda Av. Las Américas</li>
+                  <li>7. Templo Minerva</li>
+                  <li>8. INVO</li>
+                  <li>9. Parque a Centroamérica</li>
+                </ul>
+                <!-- <figure>
                   <img src="assets/img/features-2.png" alt="" class="img-fluid">
-                </figure>
+                </figure> -->
               </div>
-              <div class="tab-pane" id="tab-3">
+              <!-- <div class="tab-pane" id="tab-3">
                 <figure>
                   <img src="assets/img/features-3.png" alt="" class="img-fluid">
                 </figure>
@@ -383,59 +404,6 @@
       </div>
     </section> -->
     <!-- End Testimonials Section -->
-
-    <!-- ======= XRUN Section ======= -->
-    <section id="portfolio" class="portfolio section-bg">
-      <div class="container">
-
-        <div class="section-title" data-aos="fade-up">
-          <h2>Recorridos</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
-
-        <div class="row" data-aos="fade-up">
-          <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">Todo</li>
-              <li data-filter=".filter-5k">5K</li>
-              <li data-filter=".filter-10k">10K</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="row portfolio-container" data-aos="fade-up">
-
-          <div class="col-lg-6 col-md-6 portfolio-item filter-5k">
-            <div class="portfolio-wrap">
-              <img src="assets/img//XRun/5K.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>5k</h4>
-                <p>test</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/XRun/5K.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Recorrido 5k"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 col-md-6 portfolio-item filter-10k">
-            <div class="portfolio-wrap">
-              <img src="assets/img/XRun/10K.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>10K</h4>
-                <p>Web</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/XRun/10K.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Recorrido 10K"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End XRUN Section -->
 
     <!-- ======= Team Section ======= -->
     <section id="team" class="team">
@@ -669,9 +637,9 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>Maxim</h3>
+              <h3>Xelapan</h3>
               <p>
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
@@ -688,7 +656,7 @@
             </div>
           </div>
 
-          <div class="col-lg-2 col-md-6 footer-links">
+          <div class="col-lg-4 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
@@ -699,7 +667,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <div class="col-lg-4 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
@@ -709,30 +677,13 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
           </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-
-          </div>
-
         </div>
       </div>
     </div>
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Maxim</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/maxim-free-onepage-bootstrap-theme/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        &copy; Copyright <strong><span>Xelapan</span></strong>. Todos los derechos reservados
       </div>
     </div>
   </footer><!-- End Footer -->
