Se habilito la seccion de testimonios

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <li><a class="nav-link scrollto active" href="#inicio">Inicio</a></li>
           <li><a class="nav-link scrollto" href="#recorrido">Recorrido</a></li>
           <li><a class="nav-link scrollto" href="#services">Kit</a></li>
+          <li><a class="nav-link scrollto" href="#testimonials">Testimonios</a></li>
           <li><a class="nav-link scrollto" href="#team">Patrocinadores</a></li>
           <li><a class="nav-link scrollto getstarted" href="https://xelapan.com/index.php?route=product/product&path=_93&product_id=571" target="_blank">Comprar Ticket</a></li>
         </ul>
@@ -283,8 +284,10 @@
         </div>
 
         <div class="row">
+          <img src="/assets/img/team/team-1.jpg" alt="" class="img-fluid">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
             <div class="icon-box icon-box-pink">
+              
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4 class="title"><a href="">Lorem Ipsum</a></h4>
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
@@ -321,11 +324,11 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <!-- <section id="testimonials" class="testimonials">
+    <section id="testimonials" class="testimonials">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Testimonials</h2>
+          <h2>Testimonios</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -402,7 +405,7 @@
         </div>
 
       </div>
-    </section> -->
+    </section>
     <!-- End Testimonials Section -->
 
     <!-- ======= Team Section ======= -->
