Kit se agrego medalla

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
               data-aos-delay="400"
             >
               <div class="box">
-                <img src="assets/img/kit/kit.jpg" class="img-fluid" alt="" />
+                <img src="assets/img/kit/medalla.jpg" class="img-fluid" alt="" />
                 <h3>Medalla</h3>
                 <!-- <p>Descripcion Medalla</p> -->
               </div>
