Cambio de icono xelapan y descripcion de patrocinadores

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <!-- <h1><a href="index.html">Xelapan</a></h1> -->
           <!-- Uncomment below if you prefer to use an image logo -->
           <a href="index.html"
-            ><img src="assets/img/logo-blanco.png" alt="" class="img-fluid"
+            ><img src="assets/img/logos.png" alt="" class="img-fluid"
           /></a>
         </div>
 
@@ -496,7 +496,7 @@
         <div class="container">
           <div class="section-title" data-aos="fade-up">
             <h2>Patrocinadores de XRUn</h2>
-            <p>Eventos realizados gracias a los patrocinadores de XRun 2022</p>
+            <p>Carrera Xelapan realizada gracias al patrocinio de</p>
           </div>
 
           <!-- ======= Clients Section ======= -->
