Descargo de responsabilidad, descripcion de Kit

--- a/index.html
+++ b/index.html
@@ -106,12 +106,15 @@
       </div>
     </section>
     <!-- End Hero -->
-
     <main id="main">
       <!-- ======= Inicio Section ======= -->
       <section id="inicio" class="about">
         <div class="container">
           <div class="row">
+            <div>
+              <h3 style="text-align: center;">Descargo de Responsabilidad</h3>
+              <p>Al participar en la carrera XRUN 2022 declaro y confirmo que tengo la preparación física, los elementos y el entrenamiento adecuado para este tipo de eventos, que soy competente para las actividades que realizaré en esta actividad. Participo voluntariamente y soy consciente del desafío físico que implica la distancia, la dificultad del terreno, las posibles inclemencias del tiempo y los accidentes que pueden ocurrir durante la carrera XRUN 2022. Asumo la totalidad de los riesgos, eximiendo de toda responsabilidad a las entidades organizadoras del evento. Entiendo que emergencias de orden público pueden causar la cancelación o posponer el evento, sin que esto signifique el reembolso del pago realizado por mi participación en el evento. Declaro haber leído detenidamente cada uno de los puntos arriba indicados, así como el contenido de las bases de la carrera.</p>
+            </div>
             <div class="col-xl-6 col-lg-7" data-aos="fade-right">
               <div class="video-contenedor">
                 <iframe
@@ -203,7 +206,7 @@
           <div class="row portfolio-container" data-aos="fade-up">
             <div class="col-lg-6 col-md-6 portfolio-item filter-5k">
               <div class="portfolio-wrap">
-                <img src="assets/img//XRun/5K.png" class="img-fluid" alt="" />
+                <img src="assets/img/XRun/5K.png" class="img-fluid" alt="" />
                 <div class="portfolio-info">
                   <h4>Categoría 5K</h4>
                   <p>Carrera familiar Pet Friendly</p>
@@ -311,8 +314,17 @@
       <section id="kit" class="values">
         <div class="container" data-aos="fade-up">
           <header class="section-title">
-            <h2>Kit XRun</h2>
-            <p>Kit XRun Descripción</p>
+            <h2>Kit XRUN</h2>
+            <p>Kit incluye:
+              ✔️Playera
+              ✔️Medalla
+              ✔️Pachón
+              ✔️Mochila
+              ✔️Bandana
+              ✔️Vale de descuento desayuno Xelapan
+              ✔️Barras energética
+              ✔️Libreta <br>
+              Entrega de kits C.C. Interplaza Xela, <strong>sábado 30 de julio de 9:00 a.m. 8:00 p.m.</strong></p>
           </header>
           <div class="row">
             <div
@@ -495,7 +507,7 @@
       <section id="team" class="team">
         <div class="container">
           <div class="section-title" data-aos="fade-up">
-            <h2>Patrocinadores de XRUn</h2>
+            <h2>Patrocinadores de XRUN</h2>
             <p>Carrera Xelapan realizada gracias al patrocinio de</p>
           </div>
 
@@ -990,7 +1002,7 @@
             </div>
 
             <div class="col-lg-6 col-md-6 footer-links">
-              <h4>XRun 2022</h4>
+              <h4>XRUN 2022</h4>
               <ul>
                 <li>
                   <i class="bx bx-chevron-right"></i>
