--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="container">
           <div class="row">
             <div>
-              <h3 style="text-align: center;">Descargo de Responsabilidad</h3>
+              <h3 style="text-align: center;">Acuerdo de Participación</h3>
               <p>Al participar en la carrera XRUN 2022 declaro y confirmo que tengo la preparación física, los elementos y el entrenamiento adecuado para este tipo de eventos, que soy competente para las actividades que realizaré en esta actividad. Participo voluntariamente y soy consciente del desafío físico que implica la distancia, la dificultad del terreno, las posibles inclemencias del tiempo y los accidentes que pueden ocurrir durante la carrera XRUN 2022. Asumo la totalidad de los riesgos, eximiendo de toda responsabilidad a las entidades organizadoras del evento. Entiendo que emergencias de orden público pueden causar la cancelación o posponer el evento, sin que esto signifique el reembolso del pago realizado por mi participación en el evento. Declaro haber leído detenidamente cada uno de los puntos arriba indicados, así como el contenido de las bases de la carrera.</p>
             </div>
             <div class="col-xl-6 col-lg-7" data-aos="fade-right">
