Boton de registrar ticket

--- a/index.html
+++ b/index.html
@@ -101,7 +101,13 @@
           href="https://xelapan.com/index.php?route=product/product&path=_93&product_id=571"
           target="_blank"
           class="btn-get-started scrollto"
-          >Comprar ticket</a
+          >Comprar Ticket</a
+        >
+        <a
+          href="https://forms.gle/ueaYvNZ41b2NAjgz9"
+          target="_blank"
+          class="btn-get-ticket scrollto"
+          >Registrar Ticket</a
         >
       </div>
     </section>
